Fix z-index on menu

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -33,6 +33,7 @@ a {
 	top: 0px;
 	left: 0px;
 	right: 0px;
+	z-index: 100;
 }
 #menu>.applications {
 	float: left;
